Now stuff is working.

--- a/app/src/app/routes/public/koledar/public-koledar.component.html
+++ b/app/src/app/routes/public/koledar/public-koledar.component.html
@@ -1,4 +1,4 @@
-<app-loading [loading]="loading"/>
+<app-progress-bar-loading [loading]="loading"/>
 <iframe
   height="800"
   src="https://app.acuityscheduling.com/schedule.php?owner=17096971&calendarID=2725528"
