--- a/app/src/app/routes/admin/admin.component.html
+++ b/app/src/app/routes/admin/admin.component.html
@@ -1,3 +1,3 @@
-<app-nav-stran [navGumbi]="navGumbi">
-  <router-outlet></router-outlet>
-</app-nav-stran>
+<app-card-navigacija [buttonToolbarModels]="navGumbi">
+  <router-outlet/>
+</app-card-navigacija>
