--- a/app/src/app/routes/ucenec/testi/test/ucenec-testi-test.component.html
+++ b/app/src/app/routes/ucenec/testi/test/ucenec-testi-test.component.html
@@ -1,7 +1,9 @@
 <div class="pb-3 pt-1">
 
   <h1 class="text-center pt-3">
-    Deadline je v <button (click)="nastaviDatum()" style="top: 0px; padding-top: 15px" mat-raised-button><h1>{{deadline | date}}, {{deadline | DateOddaljenost }}</h1></button>
+    Deadline je v
+    <button (click)="nastaviDatum()" style="top: 0px; padding-top: 15px" mat-raised-button><h1>{{deadline | date}}
+      , {{deadline | date_oddaljenost }}</h1></button>
     <br>Idealno delo je <b>{{delo}}</b>.
 
     <br>Tvoja hitrost je <b>{{hitrost}}</b>.
@@ -32,8 +34,10 @@
     <div class="row row-cols-auto g-1 justify-content-center">
       <div class="col" *ngFor="let naloga of item.value">
         <button mat-raised-button
-                style="{{(naloga.status?.tip || 'NEZACETO') | StatusStyle}}"
-                routerLink="/ucenec/testi/{{test_id}}/naloge/{{naloga.id}}">{{naloga.stevilka}}</button>
+                style="{{(naloga.status?.tip || 'NEZACETO') | statusTip_style}}"
+                [routerLink]="routes.ucenec({}).naloga({test_id, 'naloga_id': naloga.id.toString()}).$">
+          {{naloga.stevilka}}
+        </button>
       </div>
     </div>
     <br>
