--- a/app/src/app/ui/parts/form-fields/form-field-sporocilo/form-field-msg.component.html
+++ b/app/src/app/ui/parts/form-fields/form-field-sporocilo/form-field-msg.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="w-100">
-  <mat-label>Sporocilo</mat-label>
+  <mat-label>Sporočilo</mat-label>
   <textarea rows="4" matInput [formControl]="formControl" required></textarea>
   <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
 </mat-form-field>
