Adding envs and i18 with better structure.

--- a/app/src/app/routes/public/index/public-index.component.html
+++ b/app/src/app/routes/public/index/public-index.component.html
@@ -1,7 +1,7 @@
 <div class="text-center pt-3">
 
   <h1>Uroš Jarc</h1>
-  <h2>Inštruktor programiranja, fizike, matematike</h2>
+  <h2 i18n>Inštruktor programiranja, fizike, matematike</h2>
 
   <div class="row justify-content-center g-3">
     <div *ngFor="let kontakt of kontakti" class="col-sm-4 ">
