--- a/app/src/app/routes/ucenec/ucenec.component.html
+++ b/app/src/app/routes/ucenec/ucenec.component.html
@@ -1,3 +1,3 @@
-<app-toolbar-navigacija [buttonToolbarModels]="buttonToolbarModels">
+<app-card-navigacija [buttonToolbarModels]="buttonToolbarModels">
   <router-outlet/>
-</app-toolbar-navigacija>
+</app-card-navigacija>
