--- a/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
+++ b/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
@@ -10,14 +10,14 @@
     <!-- Name Column -->
     <ng-container matColumnDef="naslov">
       <th mat-header-cell *matHeaderCellDef> Naslov</th>
-      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost }}"> {{test.naslov}} </td>
+      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost }}">{{test.naslov}}</td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="opravljeno">
       <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
       <td mat-cell *matCellDef="let test"
-          class="{{test.datum | date_oddaljenost_class }}"> {{test.opravljeno | percent}} </td>
+          class="{{test.datum | date_oddaljenost_class }}">{{test.opravljeno | percent}}</td>
     </ng-container>
 
     <!-- Symbol Column -->
@@ -32,15 +32,17 @@
           class="{{test.datum | date_oddaljenost_class}}">{{test.datum | date_oddaljenost}}</td>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"/>
-    <mat-row
-      class="{{test.datum | date_oddaljenost_class }} cursor-pointer"
-      *matRowDef="let test; columns: displayedColumns;"
-      [routerLink]="test.link"/>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+    <tr mat-row
+        *matRowDef="let test; columns: displayedColumns;"
+        class="{{test.datum | date_oddaljenost_class }} cursor-pointer"
+        [routerLink]="test.link">
+    </tr>
 
   </table>
-  <mat-divider/>
 
+  <mat-divider/>
   <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons/>
 
 </div>
