--- a/app/src/app/ui/windows/izberi-datum/izberi-datum.component.html
+++ b/app/src/app/ui/windows/izberi-datum/izberi-datum.component.html
@@ -1,8 +1,8 @@
 <div mat-dialog-content class="m-0 p-0">
   <mat-card style="width: 300px; height: 380px">
-    <mat-calendar [(selected)]="datum"></mat-calendar>
+    <mat-calendar [(selected)]="model.datum"></mat-calendar>
   </mat-card>
 </div>
 <div mat-dialog-actions>
-  <button class="w-100" color="primary" mat-raised-button [mat-dialog-close]="datum" cdkFocusInitial>Potrdi</button>
+  <button class="w-100" color="primary" mat-raised-button [mat-dialog-close]="model.datum" cdkFocusInitial>Potrdi</button>
 </div>
