--- a/app/src/app/ui/windows/prikazi-poslano-sporocilo/prikazi-poslano-sporocilo.component.html
+++ b/app/src/app/ui/windows/prikazi-poslano-sporocilo/prikazi-poslano-sporocilo.component.html
@@ -6,17 +6,17 @@
           <div mat-subheader>Prejemnik</div>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.prejemnik.tip}}</div>
+            <div matListItemTitle>{{model.prejemnik.tip}}</div>
             <div matListItemLine>Tip osebe</div>
           </mat-list-item>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.prejemnik.ime}} {{sporociloInfo.prejemnik.priimek}}</div>
+            <div matListItemTitle>{{model.prejemnik.ime}} {{model.prejemnik.priimek}}</div>
             <div matListItemLine>Ime in priimek</div>
           </mat-list-item>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.prejemnik_kontakt.tip}} {{sporociloInfo.prejemnik_kontakt.data}}</div>
+            <div matListItemTitle>{{model.prejemnik_kontakt.tip}} {{model.prejemnik_kontakt.data}}</div>
             <div matListItemLine>Ime in priimek</div>
           </mat-list-item>
         </mat-list>
@@ -26,24 +26,24 @@
           <div mat-subheader>Posiljatelj</div>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.posiljatelj.tip}}</div>
+            <div matListItemTitle>{{model.posiljatelj.tip}}</div>
             <div matListItemLine>Tip osebe</div>
           </mat-list-item>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.posiljatelj.ime}} {{sporociloInfo.posiljatelj.priimek}}</div>
+            <div matListItemTitle>{{model.posiljatelj.ime}} {{model.posiljatelj.priimek}}</div>
             <div matListItemLine>Ime in priimek</div>
           </mat-list-item>
           <mat-list-item>
             <mat-icon matListItemIcon>person</mat-icon>
-            <div matListItemTitle>{{sporociloInfo.posiljatelj_kontakt.tip}} {{sporociloInfo.posiljatelj_kontakt.data}}</div>
+            <div matListItemTitle>{{model.posiljatelj_kontakt.tip}} {{model.posiljatelj_kontakt.data}}</div>
             <div matListItemLine>Ime in priimek</div>
           </mat-list-item>
         </mat-list>
       </div>
     </div>
     <mat-divider/>
-    <p class="text-center mt-3">{{sporociloInfo.vsebina}}</p>
+    <p class="text-center mt-3">{{model.vsebina}}</p>
   </div>
   <div mat-dialog-actions>
     <button apperence="fill" color=primary class="w-100" mat-raised-button mat-dialog-close>Zapri</button>
