--- a/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
+++ b/app/src/app/ui/widgets/tables/table-testi/table-testi.component.html
@@ -10,33 +10,39 @@
     <!-- Name Column -->
     <ng-container matColumnDef="naslov">
       <th mat-header-cell *matHeaderCellDef> Naslov</th>
-      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost }}">{{test.naslov}}</td>
+      <td mat-cell *matCellDef="let test">
+        {{test.naslov}}
+      </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="opravljeno">
       <th mat-header-cell *matHeaderCellDef> Opravljeno</th>
-      <td mat-cell *matCellDef="let test"
-          class="{{test.datum | date_oddaljenost_class }}">{{test.opravljeno | percent}}</td>
+      <td mat-cell *matCellDef="let test">
+        {{test.opravljeno | percent}}
+      </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="datum">
       <th mat-header-cell *matHeaderCellDef> Deadline</th>
-      <td mat-cell *matCellDef="let test" class="{{test.datum | date_oddaljenost_class }}"> {{test.datum | date}} </td>
+      <td mat-cell *matCellDef="let test">
+        {{test.datum | date}}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="oddaljenost">
       <th mat-header-cell *matHeaderCellDef> Ostalo</th>
-      <td mat-cell *matCellDef="let test"
-          class="{{test.datum | date_oddaljenost_class}}">{{test.datum | date_oddaljenost}}</td>
+      <td mat-cell *matCellDef="let test">
+        {{test.datum | date_oddaljenost}}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
     <tr mat-row
         *matRowDef="let test; columns: displayedColumns;"
-        class="{{test.datum | date_oddaljenost_class }} cursor-pointer"
+        class="{{test.datum | date_oddaljenost_class}} cursor-pointer"
         [routerLink]="test.link">
     </tr>
 
