--- a/app/src/styles/animations.scss
+++ b/app/src/styles/animations.scss
@@ -1,14 +1,9 @@
 @keyframes danger-pulse {
   0% {
-    background-color: #ff0000;
-    color: white;
-  }
-  50%{
-    color: white;
+    background-color: rgba(255, 0, 0, 0.55);
   }
   100% {
     background-color: #ffefef;
-    color: black;
   }
 }
 
