Creating clean components.

--- a/app/src/app/routes/ucenec/testi/test/naloga/ucenec-testi-test-naloga.component.html
+++ b/app/src/app/routes/ucenec/testi/test/naloga/ucenec-testi-test-naloga.component.html
@@ -14,6 +14,6 @@
   </mat-tab>
 
   <mat-tab label="Zgodovina">
-    <app-table-audits [audits]="audits"/>
+    <app-table-audits [dataSource]="audits"/>
   </mat-tab>
 </mat-tab-group>
