--- a/app/src/app/ui/widgets/prikazi-audits/prikazi-audits.component.html
+++ b/app/src/app/ui/widgets/prikazi-audits/prikazi-audits.component.html
@@ -5,7 +5,7 @@
     <input matInput (keyup)="applyAuditsFilter($event)">
   </mat-form-field>
 
-  <table [dataSource]="audits" mat-table matSort multiTemplateDataRows>
+  <table [dataSource]="dataSource" mat-table matSort multiTemplateDataRows>
 
     <ng-container matColumnDef="tip">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by smer">Tip</th>
