Restructuring ui table with unified table, fix many bugs, etc...

--- a/app/src/app/ui/parts/form-fields/form-field-geslo/form-field-geslo.component.html
+++ b/app/src/app/ui/parts/form-fields/form-field-geslo/form-field-geslo.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="w-100">
   <mat-label>Geslo</mat-label>
   <mat-icon matPrefix>lock</mat-icon>
-  <input matInput [formControl]="formControl" [type]="hide ? 'password' : 'text'" required>
+  <input autocomplete="on" matInput [formControl]="formControl" [type]="hide ? 'password' : 'text'" required>
   <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
   <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
 </mat-form-field>
