--- a/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
+++ b/app/src/app/routes/ucitelj/zvezki/ucitelj-zvezki.component.html
@@ -1,18 +1,22 @@
 <mat-stepper #stepper (selectionChange)="selectionChange($event)">
     <mat-step>
       <ng-template matStepLabel>Zvezki</ng-template>
+      <h1>Zvezki</h1>
     </mat-step>
 
   <mat-step>
     <ng-template matStepLabel>Tematike</ng-template>
+    <h1>Tematike</h1>
   </mat-step>
 
   <mat-step>
     <ng-template matStepLabel>Naloge</ng-template>
+    <h1>Naloge</h1>
   </mat-step>
 
   <mat-step>
     <ng-template matStepLabel>Učenci</ng-template>
+    <h1>Ucenci</h1>
   </mat-step>
 
   <mat-step>
