--- a/app/src/app/ui/widgets/prikazi-profil-osebe/prikazi-profil-osebe.component.html
+++ b/app/src/app/ui/widgets/prikazi-profil-osebe/prikazi-profil-osebe.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col">
     <mat-list>
+      <!-- OSEBA -->
       <div mat-subheader>Oseba</div>
       <mat-list-item>
         <mat-icon matListItemIcon>person</mat-icon>
