Ustvarjanje samostojnega widgeta za sestavljanje testov, prestavljanje bolj generalne funkcije ucenje v oseba repo, poenostavitev table componente brez da bi ustvaril breaking changes! Simplifikacija ucitelj zvezki.

--- a/app/src/app/ui/parts/table/table.component.html
+++ b/app/src/app/ui/parts/table/table.component.html
@@ -13,6 +13,7 @@
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
   <tr mat-row
       *matRowDef="let row; columns: columns;"
+      [ngClass]="{'primary': selectionModel.isSelected(row)}"
       [class]="row.cls"
       (click)="izberi(row)"
       [routerLink]="row.routerLink"
