--- a/app/src/app/ui/parts/table/table.component.html
+++ b/app/src/app/ui/parts/table/table.component.html
@@ -13,14 +13,13 @@
   <tr mat-header-row *matHeaderRowDef="columns"></tr>
   <tr mat-row
       *matRowDef="let row; columns: columns;"
-      [ngClass]="{'primary': selectionModel.isSelected(row)}"
+      [ngClass]="{'primary': isSelected(row)}"
       [class]="row.cls"
       (click)="izberi(row)"
       [routerLink]="row.routerLink"
   ></tr>
 
 </table>
-
 <mat-divider/>
 
 <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons/>
