Na serverju dodane stvari za sprejemanje novih testov, sestavi test compoenta zakljucena, dodan form field besede, datum za lažje prikazovanje elementov. Stvari na frontendu so dejansko dokaj zakljucene.

--- a/app/src/app/routes/public/kontakt/public-kontakt.component.html
+++ b/app/src/app/routes/public/kontakt/public-kontakt.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="col-12">
-      <app-form-field-msg/>
+      <app-form-field-sporocilo/>
       <button [disabled]="loading" mat-raised-button type="submit" color="primary" class="w-100">Pošlji</button>
     </div>
   </div>
