--- a/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
+++ b/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.*?>
 
 
-<BorderPane fx:controller="data.gui2.widgets.Obracanje_rezanje_zip_slike" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:controller="data.gui2.parts.Obracanje_rezanje_zip_slike" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-       <fx:include fx:id="imageView_zipSlika_" source="../parts/ImageView_ZipSlika.fxml"/>
+       <fx:include fx:id="imageView_zipSlika_" source="../elements/ImageView_ZipSlika.fxml"/>
    </center>
    <bottom>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
