--- a/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
+++ b/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane fx:controller="data.gui2.parts.Obracanje_rezanje_zip_slike" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="data.gui2.parts.Obracanje_rezanje_zip_slike">
    <center>
-       <fx:include fx:id="imageView_zipSlika_" source="../elements/ImageView_ZipSlika.fxml"/>
+       <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" />
    </center>
    <bottom>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
@@ -14,6 +13,12 @@
             <Label fx:id="infoL" alignment="CENTER" contentDisplay="CENTER" text="Label" />
             <Slider fx:id="rotacijaS" blockIncrement="0.0" majorTickUnit="1.0" max="10.0" min="-10.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" />
             <Slider fx:id="paddingS" blockIncrement="0.0" majorTickUnit="10.0" max="150.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" />
+            <HBox>
+               <children>
+                  <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </bottom>
