Dodana funkcijonalnost za risanje anotacij.

--- a/api/data/src/main/resources/data/gui2/elements/ImageView_BufferedImage.fxml
+++ b/api/data/src/main/resources/data/gui2/elements/ImageView_BufferedImage.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
 
- <ImageView fx:controller="data.gui2.elements.ImageView_BufferedImage" fx:id="self" fitHeight="900.0" pickOnBounds="true" preserveRatio="true" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane fx:id="backgroundP" maxHeight="900.0" maxWidth="636.447204589843" minHeight="900.0" minWidth="636.447204589843" prefHeight="900.0" prefWidth="636.447204589843" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="data.gui2.elements.ImageView_BufferedImage">
+   <children>
+      <ImageView fx:id="self" fitHeight="900.0" fitWidth="636.44721" pickOnBounds="true" preserveRatio="true" />
+   </children>
+</Pane>
