--- a/api/data/src/main/resources/data/gui2/elements/ImageView_BufferedImage.fxml
+++ b/api/data/src/main/resources/data/gui2/elements/ImageView_BufferedImage.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane fx:id="backgroundP" maxHeight="900.0" maxWidth="636.447204589843" minHeight="900.0" minWidth="636.447204589843" prefHeight="900.0" prefWidth="636.447204589843" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="data.gui2.elements.ImageView_BufferedImage">
+<Pane fx:id="backgroundP" maxHeight="1100.0" maxWidth="636.0" minHeight="1100.0" minWidth="636.0" prefHeight="1100.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="data.gui2.elements.ImageView_BufferedImage">
    <children>
-      <ImageView fx:id="self" fitHeight="900.0" fitWidth="636.44721" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="self" fitHeight="1100.0" fitWidth="636.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
