--- a/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
+++ b/api/data/src/main/resources/data/gui2/parts/Obracanje_rezanje_zip_slike.fxml
@@ -5,7 +5,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="data.gui2.parts.Obracanje_rezanje_zip_slike">
    <center>
-       <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" />
+       <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
