--- a/api/data/src/main/resources/data/gui2/parts/Anotiranje_zip_slike.fxml
+++ b/api/data/src/main/resources/data/gui2/parts/Anotiranje_zip_slike.fxml
@@ -8,7 +8,7 @@
       <HBox BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
+            <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
    </bottom>
