--- a/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
+++ b/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
@@ -3,20 +3,41 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.app.parts.Rezanje_slike">
-   <center>
-       <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
-         <children>
-            <HBox>
+<SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" orientation="VERTICAL" BorderPane.alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="gui.app.parts.Rezanje_slike">
+    <items>
+        <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <center>
+                <fx:include fx:id="top_imageView_bufferedImage_" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" />
+            </center>
+            <bottom>
+                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                    <children>
+                        <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                            <children>
+                                <Button fx:id="resetirajDelNalogeB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj del" HBox.hgrow="ALWAYS" />
+                                <Button fx:id="potrdiDelNalogeB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi del" HBox.hgrow="ALWAYS" />
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+            </bottom>
+        </BorderPane>
+        <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <center>
+                <fx:include fx:id="down_imageView_bufferedImage_" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
+            </center>
+         <bottom>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
+                  <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="resetirajNalogoB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj nalogo" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="potrdiNalogoB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi nalogo" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-         </children>
-      </VBox>
-   </bottom>
-</BorderPane>
+            </VBox>
+         </bottom>
+        </BorderPane>
+    </items>
+</SplitPane>
