--- a/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
+++ b/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
@@ -9,18 +9,6 @@
             <center>
                 <fx:include fx:id="top_imageView_bufferedImage_" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" />
             </center>
-            <bottom>
-                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-                    <children>
-                        <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-                            <children>
-                                <Button fx:id="prejsnjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Prejsnji del" HBox.hgrow="ALWAYS" />
-                                <Button fx:id="naslednjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Naslednji del" HBox.hgrow="ALWAYS" />
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </bottom>
         </BorderPane>
         <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="422.0" prefWidth="636.0">
             <center>
@@ -29,13 +17,14 @@
          <bottom>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                <children>
-                  <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="prejsnjaNalogaB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Prejsnja naloga" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="resetirajNalogoB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="naslednjaNalogaB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Naslednja naloga" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
+                  <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
+                        <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                            <children>
+                        <Button fx:id="resetirajDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj del" HBox.hgrow="ALWAYS" />
+                                <Button fx:id="prejsnjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Prejsnji del" HBox.hgrow="ALWAYS" />
+                                <Button fx:id="naslednjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Naslednji del" HBox.hgrow="ALWAYS" />
+                            </children>
+                        </HBox>
                </children>
             </VBox>
          </bottom>
