--- a/api/gui/src/main/resources/gui/app/parts/Popravljanje_slike.fxml
+++ b/api/gui/src/main/resources/gui/app/parts/Popravljanje_slike.fxml
@@ -15,6 +15,7 @@
             <Slider fx:id="paddingS" blockIncrement="0.0" majorTickUnit="10.0" max="150.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" />
             <HBox>
                <children>
+                  <Button fx:id="preskociB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Preskoči" HBox.hgrow="ALWAYS" />
                   <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
                   <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
                </children>
