--- a/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
+++ b/api/gui/src/main/resources/gui/app/parts/Rezanje_slike.fxml
@@ -20,7 +20,14 @@
                   <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                         <HBox maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                             <children>
-                        <Button fx:id="resetirajDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj del" HBox.hgrow="ALWAYS" />
+                        <MenuButton alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" popupSide="TOP" text="Izbriši" HBox.hgrow="NEVER">
+                          <items>
+                            <MenuItem fx:id="izbrisiDodaneAnotacijeB" mnemonicParsing="false" text="Dodane anotacije" />
+                            <MenuItem fx:id="izbrisiVseAnotacijeB" mnemonicParsing="false" text="Vse anotacije" />
+                              <MenuItem fx:id="izbrisiCelotniDelB" mnemonicParsing="false" text="Celoten del" />
+                          </items>
+                        </MenuButton>
+                        <Button fx:id="ustvariDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ustvari del" HBox.hgrow="ALWAYS" />
                                 <Button fx:id="prejsnjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Prejsnji del" HBox.hgrow="ALWAYS" />
                                 <Button fx:id="naslednjiDelB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Naslednji del" HBox.hgrow="ALWAYS" />
                             </children>
