--- a/api/gui/src/main/resources/gui/app/parts/Anotiranje_slike.fxml
+++ b/api/gui/src/main/resources/gui/app/parts/Anotiranje_slike.fxml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.app.parts.Anotiranje_slike">
-   <bottom>
-      <HBox BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS" />
-            <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS" />
-         </children>
-      </HBox>
-   </bottom>
-   <center>
-       <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER" />
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.app.parts.Anotiranje_slike">
+    <bottom>
+        <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+            <children>
+                <Label fx:id="anotacijaL" alignment="CENTER" contentDisplay="CENTER" textAlignment="CENTER">
+                    <VBox.margin>
+                        <Insets bottom="10.0" top="10.0"/>
+                    </VBox.margin>
+                </Label>
+                <HBox>
+                    <children>
+                        <Button fx:id="resetirajB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resetiraj" HBox.hgrow="ALWAYS"/>
+                        <Button fx:id="potrdiB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Potrdi" HBox.hgrow="ALWAYS"/>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </bottom>
+    <center>
+        <fx:include fx:id="imageView_bufferedImage_" source="../elements/ImageView_BufferedImage.fxml" BorderPane.alignment="CENTER"/>
+    </center>
 </BorderPane>
